# auto-music-studio

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ai-music-spec.md  demo-us-3.1.md  demo-us-3.2.md  demo-us-4.1.md  demo-us-4.4.md  demo-us-6.2.md  demo-us-6.4.md  demo-us-6.5.md  demo.md  model-deployment.md  pyproject.toml  user-stories.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  docker-publish.yml  glm-review.yml
docker/: .dockerignore  Dockerfile  handler.py
docs/demos/: demo_batch_us105.py  us-0.1-job-factory.md  us-10.5-batch.md  us-11.1-compute-routing.md  us-11.3-docker.md  us-11.4-compute-status.md  us-11.5-runpod-volume.md  us-11.x-runpod-s3-delivery.py  us-11.x-runpod-s3.md  us-12.1-mastering.md  us-12.2-dolby.md  us-12.3-mastering-fallback.md  us-12.4-mastering-preview.md  us-12.5-batch-mastering.md  us-13.1-cover-art.md  us-13.2-soundcloud.md  us-13.3-releases.md  us-13.4-isrc-upc.md  us-13.5-distribution-prep.md  us-13.6-distribution-status.md  us-13.6-distribution-status.py  us-14.2-streaming.md  us-14.3-playback-queue.md  us-14.4-similar-clips.md  us-15.1-nextjs-scaffold.md  us-15.2-app-shell.md  us-15.3-shared-http.md  us-15.5-profile-settings.md  us-16.3-sounds-creation.md  us-16.4-model-selector.md  us-16.5-workspace-panel.md  us-16.6-clip-card.md  us-19.3-timeline-tools.md  us-19.4-track-controls.md  us-19.6-export.md  us-20.0-public-song-page.md
scripts/: demo_us_13_1_artwork.py  demo_us_16_4_models.py  runpod-setup.py
src/acemusic/: __init__.py  _http.py  audio.py  backends.py  bakuage_client.py  cli.py  client.py  config.py  constants.py  daw_export.py  db.py  dolby_client.py  elevenlabs_client.py  image_client.py  image_processing.py  landr_client.py  mastering_orchestrator.py  mastering_protocol.py  midi_client.py  models.py  runpod_client.py  song_structure.py  stems_client.py  storage.py  studio_mixdown.py  utils.py  workspace.py
tasks/: todo.md
tests/: _factories.py  conftest.py  helpers_elevenlabs.py  test_add_vocal.py  test_api_health.py  test_api_settings.py  test_artwork_api.py  test_artwork_service.py  test_artwork_tasks.py  test_audio.py  test_auth_dependencies.py  test_auth_models.py  test_auth_oauth.py  test_auth_routes.py  test_auth_services.py  test_auth_tokens.py  test_backend.py  test_backends.py  test_bakuage_client.py  test_batch_api.py  test_batch_export.py  test_cli.py  test_cli_helpers.py  test_client.py  test_clips.py  test_clips_api.py  test_clips_crud_api.py  test_clips_edit_api.py  test_clips_full_song_api.py  test_clips_iterative_api.py  test_clips_iterative_tasks.py  test_clips_lineage_api.py  test_clips_midi_api.py  test_clips_stems_api.py  test_clips_visibility_api.py  test_compose.py  test_compute_api.py  test_compute_status.py  test_cover.py  test_credits_api.py  (+69 more)
user-stories/: 00-overview.md  01-layer-1-cli-foundation.md  02-layer-2-platform-api.md  03-layer-3-web-ui.md  04-layer-4-advanced-integrations.md  05-appendices.md
web/: .env.example  README.md  middleware.test.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.test.ts  proxy.ts  vitest.config.ts  vitest.setup.ts
web/app/: layout.tsx  page.tsx
web/app/me/: page.tsx
web/components/: theme-provider.tsx
web/config/: navigation.ts
web/contexts/: auth-context.test.tsx  auth-context.tsx  model-selection-context.test.tsx  model-selection-context.tsx  notifications-context.test.tsx  notifications-context.tsx  player-context.test.ts  player-context.tsx  playlists-context.tsx  studio-context.test.ts  studio-context.tsx
web/hooks/: use-audio-engine.ts  use-auth.ts  use-clip-audio.test.tsx  use-clip-audio.ts  use-clip-edit.test.tsx  use-clip-edit.ts  use-clip.ts  use-clips.test.tsx  use-clips.ts  use-debounced-value.ts  use-editor-shortcuts.test.ts  use-editor-shortcuts.ts  use-full-song-flow.test.ts  use-full-song-flow.ts  use-generation.test.tsx  use-generation.ts  use-lineage.ts  use-mastering-job.test.tsx  use-mastering-job.ts  use-mastering-previews.test.tsx  use-mastering-previews.ts  use-player-shortcuts.test.ts  use-player-shortcuts.ts  use-profile-settings.test.tsx  use-profile-settings.ts  use-public-clip.ts  use-releases-poll.test.tsx  use-releases-poll.ts  use-require-auth.ts  use-similar-clips.ts  use-song-actions.test.tsx  use-song-actions.ts  use-studio-export.test.tsx  use-studio-export.ts  use-studio-playback.test.tsx  use-studio-playback.ts  use-subscription-tier.test.tsx  use-subscription-tier.ts  use-workspaces.test.tsx  use-workspaces.ts
web/lib/: audio-context.test.ts  audio-context.ts  audio-inputs.ts  audio-peaks.test.ts  audio-peaks.ts  auth-server.ts  auth.test.ts  auth.ts  clip-audio-cache.test.ts  clip-audio-cache.ts  clip-drag.test.ts  clip-drag.ts  clip-labels.ts  clips.test.ts  clips.ts  demo-tracks.ts  distribution-server.ts  distribution.test.ts  distribution.ts  edit-proxy.test.ts  edit-proxy.ts  editing-validation.test.ts  editing-validation.ts  editing.test.ts  editing.ts  explore.test.ts  explore.ts  feed.test.ts  feed.ts  generate.test.ts  generate.ts  job-status.test.ts  job-status.ts  lineage.test.ts  lineage.ts  master-bus.test.ts  master-bus.ts  mastering-history.test.ts  mastering-history.ts  mastering.test.ts  (+42 more)
(+434 files in other folders)
