[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acemusic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27",
    "python-dotenv>=0.13.0",
    "PyYAML>=5.4",
    "mutagen>=1.47",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
]

[project.scripts]
acemusic = "acemusic.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-cov",
    "ruff",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acemusic"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E7xx/E9xx: logical errors; F: pyflakes; I: isort. Exclude E1-E5 (whitespace/formatting) — black owns those.
select = ["E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["acemusic"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/acemusic --cov-report=term-missing -m 'not integration'"
bdd_features_base_dir = "tests/features"
markers = [
    "integration: requires a live external service (deselect with -m 'not integration')",
]
