[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acemusic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27",
    "python-dotenv>=0.13.0",
    "PyYAML>=5.4",
    "mutagen>=1.47",
    # numpy capped <2: the audio-ml-midi extra pulls basic-pitch -> tensorflow 2.14,
    # which is not NumPy-2 compatible (import fails). The core audio stack (librosa,
    # numba, scipy, soundfile, pydub) runs fine on numpy 1.x. Lift once basic-pitch
    # ships a numpy-2-ready backend (e.g. tensorflow >= 2.16).
    "numpy>=1.24.0,<2",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
    "mido>=1.3.0",
    "pyloudnorm>=0.1.0",
    "scipy>=1.10.0",
    # fastapi + pydantic-settings are core (not an optional extra): from Layer 2
    # onward the HTTP API is a required component of the package, and the test
    # suite imports acemusic.api. Only the server runner (uvicorn) is optional.
    "fastapi>=0.110",
    "pydantic-settings>=2.7",
    # Beanie 2.x is the ODM; it uses pymongo's native async client
    # (AsyncMongoClient) directly — Motor is deprecated and no longer used.
    # dnspython is required for Atlas mongodb+srv:// connection strings.
    "beanie>=2.1",
    "pymongo>=4.9",
    "dnspython>=2.6",
    "email-validator>=2.0",
    # OAuth2 + JWT auth (US-8.3). authlib drives the provider flows; PyJWT signs
    # and verifies our own access tokens (python-jose is unmaintained / has CVEs).
    "authlib>=1.3",
    "pyjwt>=2.8",
]

[project.scripts]
acemusic = "acemusic.cli:app"

[project.optional-dependencies]
audio-ml = [
    "demucs>=4.0",
    "torch>=2.0",
    "torchaudio>=2.0",
]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "black",
    "uvicorn[standard]>=0.29",
    "freezegun",
]
audio-ml-midi = [
    "basic-pitch>=0.3.0",
]
api = [
    "uvicorn[standard]>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acemusic"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E7xx/E9xx: logical errors; F: pyflakes; I: isort. Exclude E1-E5 (whitespace/formatting) — black owns those.
select = ["E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["acemusic"]
combine-as-imports = true

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/acemusic --cov-report=term-missing -m 'not integration'"
bdd_features_base_dir = "tests/features"
asyncio_mode = "auto"
markers = [
    "integration: requires a live external service (deselect with -m 'not integration')",
]

[dependency-groups]
dev = [
    "respx>=0.23.1",
]
